# weather_forecast_django

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
weather_forecast_app/: env_data.py
weather_forecast_app/authorization/: tests.py  urls.py  views.py
weather_forecast_app/authorization/management/commands/: 1_add_group_users.py  2_add_permissions.py  3_add_group_permissions.py  4_add_superuser.py
weather_forecast_app/authorization/templates/authorization/: login.html  register.html
weather_forecast_app/forecast/: forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
weather_forecast_app/forecast/migrations/: 0001_initial.py  0002_alter_city_latitude_alter_city_longitude.py  0003_alter_city_count_alter_city_latitude_and_more.py  0004_alter_city_options_remove_city_count_city_user.py  0005_rename_user_city_user_id.py  0006_alter_city_options.py  0007_alter_city_latitude_alter_city_longitude.py  0008_city_count_alter_city_latitude_alter_city_longitude.py  0009_alter_city_latitude_alter_city_longitude.py  0010_alter_city_latitude_alter_city_longitude.py
weather_forecast_app/forecast/templates/forecast/: cities_list.html  city_form.html  forecast_near_future.html  history_list.html
weather_forecast_app/weather_forecast_app/: ----middleware.py  asgi.py  settings.py  settingsORI.py  urls.py  wsgi.py
weather_forecast_app/weather_forecast_app/fixtures/: db.json
weather_forecast_app/weather_forecast_app/templates/: base.html
(+1 files in other folders)
