[tool.poetry]
name = "weather-forecast-django"
version = "0.1.0"
description = ""
authors = ["Mikhail Sobolev <kseon@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
attrs = "23.2.0"
cattrs = "23.2.3"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cryptography = "42.0.8"
defusedxml = "0.8.0rc2"
django = "5.0.7"
django-debug-toolbar = "4.4.6"
django-filter = "24.2"
django-templated-mail = "1.1.1"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
djoser = "2.2.3"
flatbuffers = "24.3.25"
idna = "3.7"
numpy = "2.0.0"
oauthlib = "3.2.2"
openmeteo-requests = "1.2.0"
openmeteo-sdk = "1.11.11"
pandas = "2.2.2"
platformdirs = "4.2.2"
psycopg2-binary = "2.9.9"
pycparser = "2.22"
pyjwt = "2.8.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python3-openid = "3.2.0"
pytz = "2024.1"
requests = "2.32.3"
requests-cache = "1.2.1"
requests-oauthlib = "2.0.0"
retry-requests = "2.0.0"
six = "1.16.0"
social-auth-app-django = "5.4.2"
social-auth-core = "4.5.4"
sqlparse = "0.5.1"
tzdata = "2024.1"
url-normalize = "1.4.3"
urllib3 = "2.2.2"
whitenoise = "6.7.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
